text view changed

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <p>"Da ist niemand der den Schmerz an sich liebt, der danach sucht und ihn haben möchte, einfach weil es Schmerz
             ist..."</p>
     </section>
-    <section id="was">
+    <section id="was" class="infoBox">
         <h2>Was ist Lorem Ipsum?</h2>
-        <p>Lorem Ipsum ist ein einfacher Demo-Text für die Print- und Schriftindustrie. Lorem Ipsum ist in der Industrie
+        <img src="img/greek.jpg" alt="greekDesign" id="greek">
+        <p class="details">Lorem Ipsum ist ein einfacher Demo-Text für die Print- und Schriftindustrie. <br>Lorem Ipsum ist in der Industrie
             bereits der Standard Demo-Text seit 1500, als ein unbekannter Schriftsteller eine Hand voll Wörter nahm und
             diese durcheinander warf um ein Musterbuch zu erstellen. Es hat nicht nur 5 Jahrhunderte überlebt, sondern
             auch in Spruch in die elektronische Schriftbearbeitung geschafft (bemerke, nahezu unverändert). Bekannt
@@ -42,9 +43,9 @@
             Software wie "Aldus PageMaker" - ebenfalls mit Lorem Ipsum.</p>
 
     </section>
-    <section id="woher">
-        <h2>Wo kommt es her?</h2>
-        <p>
+    <section  class="infoBox">
+        <h2 id="woher">Wo kommt es her?</h2>
+        <p class="details">
             Glauben oder nicht glauben, Lorem Ipsum ist nicht nur ein zufälliger Text. Er hat Wurzeln aus der
             Lateinischen Literatur von 45 v. Chr, was ihn über 2000 Jahre alt macht. Richar McClintock, ein
             Lateinprofessor des Hampden-Sydney College in Virgnia untersuche einige undeutliche Worte, "consectetur",
@@ -59,9 +60,9 @@
         </p>
     </section>
 
-    <section id="warum">
+    <section id="warum" class="infoBox">
         <h2>Warum nutzen wir es?</h2>
-        <p>Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht. Der
+        <p class="details">Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht. Der
             Punkt, Lorem Ipsum zu nutzen, ist, dass es mehr oder weniger die normale Anordnung von Buchstaben darstellt
             und somit nach lesbarer Sprache aussieht. Viele Desktop Publisher und Webeditoren nutzen mittlerweile Lorem
             Ipsum als den Standardtext, auch die Suche im Internet nach "lorem ipsum" macht viele Webseiten sichtbar, wo
@@ -69,9 +70,9 @@
             bewusst (beeinflusst von Witz und des eigenen Geschmacks)</p>
     </section>
 
-    <section id="wo">
+    <section id="wo" class="infoBox">
         <h2>Wo kann ich es kriegen?</h2>
-        <p>Es gibt viele Variationen der Passages des Lorem Ipsum, aber der Hauptteil erlitt Änderungen in irgendeiner
+        <p class="details">Es gibt viele Variationen der Passages des Lorem Ipsum, aber der Hauptteil erlitt Änderungen in irgendeiner
             Form, durch Humor oder zufällige Wörter welche nicht einmal ansatzweise glaubwürdig aussehen. Wenn du eine
             Passage des Lorem Ipsum nutzt, solltest du aufpassen dass in der Mitte des Textes keine ungewollten Wörter
             stehen. Viele der Generatoren im Internet neigen dazu, vorgefertigte Stücke zu wiederholen - was es nötig
