--- a/index.html
+++ b/index.html
@@ -32,37 +32,46 @@
         <p>"Da ist niemand der den Schmerz an sich liebt, der danach sucht und ihn haben möchte, einfach weil es Schmerz
             ist..."</p>
     </section>
-    <section id="was" class="infoBox">
+    <hr>
+    <section class="infoBox" id="was">
         <h2>Was ist Lorem Ipsum?</h2>
-        <img src="img/greek.jpg" alt="greekDesign" id="greek">
-        <p class="details">Lorem Ipsum ist ein einfacher Demo-Text für die Print- und Schriftindustrie. <br>Lorem Ipsum ist in der Industrie
-            bereits der Standard Demo-Text seit 1500, als ein unbekannter Schriftsteller eine Hand voll Wörter nahm und
+        <img src="img/brochure_lorem.gif" alt="Sampl of Lorem" id="sampleLorem">
+
+        <p><div class="firstInfoLine">
+            Lorem Ipsum ist ein einfacher Demo-Text für die Print- und Schriftindustrie.
+        </div>
+        Lorem Ipsum ist in der Industrie bereits der Standard Demo-Text seit 1500, als ein unbekannter Schriftsteller eine Hand voll Wörter nahm und
             diese durcheinander warf um ein Musterbuch zu erstellen. Es hat nicht nur 5 Jahrhunderte überlebt, sondern
             auch in Spruch in die elektronische Schriftbearbeitung geschafft (bemerke, nahezu unverändert). Bekannt
             wurde es 1960, mit dem erscheinen von "Letraset", welches Passagen von Lorem Ipsum enhielt, so wie Desktop
             Software wie "Aldus PageMaker" - ebenfalls mit Lorem Ipsum.</p>
 
     </section>
-    <section  class="infoBox">
-        <h2 id="woher">Wo kommt es her?</h2>
-        <p class="details">
-            Glauben oder nicht glauben, Lorem Ipsum ist nicht nur ein zufälliger Text. Er hat Wurzeln aus der
-            Lateinischen Literatur von 45 v. Chr, was ihn über 2000 Jahre alt macht. Richar McClintock, ein
-            Lateinprofessor des Hampden-Sydney College in Virgnia untersuche einige undeutliche Worte, "consectetur",
-            einer Lorem Ipsum Passage und fand eine unwiederlegbare Quelle. Lorem Ipsum komm aus der Sektion 1.10.32 und
-            1.10.33 des "de Finibus Bonorum et Malorum" (Die Extreme von Gut und Böse) von Cicero, geschrieben 45 v.
-            Chr. Dieses Buch ist Abhandlung der Ethiktheorien, sehr bekannt wärend der Renaissance. Die erste Zeile des
-            Lorem Ipsum, "Lorem ipsum dolor sit amet...", kommt aus einer Zeile der Sektion 1.10.32.
+    <section class="infoBox" id="woher">
+        <h2>Wo kommt es her?</h2>
+        <img src="img/greek.jpg" alt="Greek" id="greek">
 
-            Der Standardteil von Lorem Ipsum, genutzt seit 1500, ist reproduziert für die, die es interessiert. Sektion
-            1.10.32 und 1.10.33 von "de Finibus Bonorum et Malroum" von Cicero sind auch reproduziert in ihrer
-            Originalform, abgeleitet von der Englischen Version aus von 1914 (H. Rackham)
+        <p class="details">
+        <div class="firstInfoLine">
+            Glauben oder nicht glauben, Lorem Ipsum ist nicht nur ein zufälliger Text.</div> Er hat Wurzeln aus der
+        Lateinischen Literatur von 45 v. Chr, was ihn über 2000 Jahre alt macht. Richar McClintock, ein
+        Lateinprofessor des Hampden-Sydney College in Virgnia untersuche einige undeutliche Worte, "consectetur",
+        einer Lorem Ipsum Passage und fand eine unwiederlegbare Quelle. Lorem Ipsum komm aus der Sektion 1.10.32 und
+        1.10.33 des "de Finibus Bonorum et Malorum" (Die Extreme von Gut und Böse) von Cicero, geschrieben 45 v.
+        Chr. Dieses Buch ist Abhandlung der Ethiktheorien, sehr bekannt wärend der Renaissance. Die erste Zeile des
+        Lorem Ipsum, "Lorem ipsum dolor sit amet...", kommt aus einer Zeile der Sektion 1.10.32. <br>
+
+        Der Standardteil von Lorem Ipsum, genutzt seit 1500, ist reproduziert für die, die es interessiert. Sektion
+        1.10.32 und 1.10.33 von "de Finibus Bonorum et Malroum" von Cicero sind auch reproduziert in ihrer
+        Originalform, abgeleitet von der Englischen Version aus von 1914 (H. Rackham)
         </p>
     </section>
 
     <section id="warum" class="infoBox">
         <h2>Warum nutzen wir es?</h2>
-        <p class="details">Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht. Der
+        <img src="img/loremipsumbutton.jpg" alt="loremButtton" class="">
+        <p class="details"><div class="firstInfoLine">Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein
+            Layout ansieht. </div>Der
             Punkt, Lorem Ipsum zu nutzen, ist, dass es mehr oder weniger die normale Anordnung von Buchstaben darstellt
             und somit nach lesbarer Sprache aussieht. Viele Desktop Publisher und Webeditoren nutzen mittlerweile Lorem
             Ipsum als den Standardtext, auch die Suche im Internet nach "lorem ipsum" macht viele Webseiten sichtbar, wo
@@ -72,8 +81,10 @@
 
     <section id="wo" class="infoBox">
         <h2>Wo kann ich es kriegen?</h2>
-        <p class="details">Es gibt viele Variationen der Passages des Lorem Ipsum, aber der Hauptteil erlitt Änderungen in irgendeiner
-            Form, durch Humor oder zufällige Wörter welche nicht einmal ansatzweise glaubwürdig aussehen. Wenn du eine
+        <img src="img/loremIpsumSearch.jpg" alt="loremSearch">
+        <p class="details"><div class="firstInfoLine">Es gibt viele Variationen der Passages des Lorem Ipsum, aber der Hauptteil erlitt Änderungen
+            in irgendeiner
+            Form, durch Humor oder zufällige Wörter welche nicht einmal ansatzweise glaubwürdig aussehen.</div> Wenn du eine
             Passage des Lorem Ipsum nutzt, solltest du aufpassen dass in der Mitte des Textes keine ungewollten Wörter
             stehen. Viele der Generatoren im Internet neigen dazu, vorgefertigte Stücke zu wiederholen - was es nötig
             machte einen richtigen Generator zu entwickeln. Wir nutzen ein Wörterbuch aus über 200 Lateinischen Wörter,
